--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,20 @@
     <string name="menu_palmistry">Palmistry</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--    Horoscope-->
+    <string name="haries">Aries</string>
+    <string name="htaurus">Taurus</string>
+    <string name="hgemini">Gemini</string>
+    <string name="hcancer">Cancer</string>
+    <string name="hleo">Leo</string>
+    <string name="hvirgo">Virgo</string>
+    <string name="hlibra">Libra</string>
+    <string name="hscorpio">Scorpio</string>
+    <string name="hsagittarius">Sagittarius</string>
+    <string name="hcapricorn">Capricorn</string>
+    <string name="haquarius">Aquarius</string>
+    <string name="hpisces">Pisces</string>
+
+
 </resources>
